--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON)
 set( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
 
 # CUDA
+set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
 set (_VOLREND_CUDA_ "// ")
 set (_VOLREND_USE_CUDA ${VOLREND_USE_CUDA})
 if (EMSCRIPTEN)
